# Meaning-Oriented-invariance-Framework

./: .gitignore
moif/: .gitignore  DEV_SPEC.md  README.md  REPORT_SPEC.md  advanced_divergence_results.csv  find_exact_state.py  instantaneous_divergence_results.csv  map_subjective.py  parse_quest.py  plot_all_subjects_emotion.py  plot_distribution_overlap.py  plot_invariance_breaking.py  plot_micro_state.py  plot_multiple_distributions.py  plot_signals.py  plot_true_emotion.py  plot_universal_microstates.py  plot_within_subject.py  proposal_extracted.md  pyproject.toml  run_eval.py  subjective_scores.csv  within_subject_analysis.py  within_subject_invariance.csv
moif/.github/workflows/: ci.yaml
moif/configs/: demo_csv.yaml  wesad_hr_absband.yaml  wesad_hr_normband.yaml
moif/data/: README.md
moif/data/sample/: synthetic.csv
moif/moif/: __init__.py  cli.py  config.py  logging_.py  pipeline.py
moif/moif/invariance/: banding.py  divergence.py  stats.py
moif/moif/loaders/: wesad.py
moif/moif/signal/: advanced_features.py  instantaneous.py
moif/notebooks/: 00_wesad_repro.ipynb
moif/schemas/: config.schema.json  external_state.schema.json  finding.schema.json  run_result.schema.json  sced_protocol.schema.json
moif/scripts/: evaluate_wesad.py  visualize_S11_overlap.py
moif/tests/: test_config.py  test_run_artifacts.py  test_schemas.py
